--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,7 +18,7 @@
   </div>
 <% else %>
   <div class="center hero-unit">
-    <h1>Welcome to the Sample App</h1>
+    <h1> Hello Dream World </h1>
 
     <h2>
     This is the home page for the
@@ -26,7 +26,7 @@
     sample application.
     </h2>
 
-    <%= link_to "Sign up now!", signup_path,
+    <%= link_to "登録", signup_path,
                                 class: "btn btn-large btn-primary" %>
   </div>
 
