--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <script>
 $(document).ready(function() {
   var exp = /(\b(https?|ftp|file):\/\/[-A-Z0-9+&@#\/%?=~_|!:,.;]*[-A-Z0-9+&@#\/%=~_|])/ig;
-  $('body').html($('body').html().replace(exp,"<a href='$1' target='_blank'>$1</a>"));
+  $('.content').html($('.content').html().replace(exp,"<a href='$1' target='_blank'>$1</a>"));
 });
 </script>
     <%= csrf_meta_tags %>
