--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -1,16 +1,9 @@
-<% provide(:title, 'Help') %>
-<h1>Help</h1>
-<p>
-  Get help on the Ruby on Rails Tutorial at the
-  <a href="http://railstutorial.jp/help">Rails Tutorial help page</a>.
-  To get help on this sample app, see the
-  <a href="http://railstutorial.jp/book">Rails Tutorial book</a>.
- <br>
 <h1>チャット Room</h1>
 <form class="form-horizontal">
 	<div class="form-group">
+		<label class="col-sm-2 control-label" for="username">名前</label>
 	    <div class="col-sm-10">
-	      <span id="username" ><%= current_user.name %></span>
+	      <input type="text" class="form-control" id="username"/>
 	    </div>
 	</div>
 	<div class="form-group">
@@ -25,5 +18,4 @@
 	    </div>
 	</div>
 </form>
-<div id="chat" class="well" data-uri="<%= request.host %>:<%= request.port %>/websocket">
-</div>
+<div id="chat" class="well" data-uri="<%= request.host %>:<%= request.port %>/websocket"></div>
