--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -27,3 +27,4 @@
 </form>
 <div id="chat" class="well" data-uri="<%= request.host %>:<%= request.port %>/websocket">
 </div>
+<div id="chat2"></div>
