--- a/app/assets/javascripts/chat.js.coffee.erb
+++ b/app/assets/javascripts/chat.js.coffee.erb
@@ -1,4 +1,6 @@
 class @ChatClass
+
+
   constructor: (url, useWebsocket) ->
     # これがソケットのディスパッチャー
     @dispatcher = new WebSocketRails(url, useWebsocket)
@@ -10,7 +12,10 @@ class @ChatClass
     $('#send').on 'click', @sendMessage
     # サーバーからnew_messageを受け取ったらreceiveMessageを実行
     @dispatcher.bind 'new_message', @receiveMessage
- 
+    #@dispatcher.on_open = function(messsage){
+     #   console.log('Connection has been established:',message);
+    #} 
+    
   sendMessage: (event) =>
     # サーバ側にsend_messageのイベントを送信
     # オブジェクトでデータを指定
@@ -18,10 +23,12 @@ class @ChatClass
     msg_body = $('#msgbody').val()
     @dispatcher.trigger 'new_message', { name: user_name , body: msg_body }
     $('#msgbody').val('')
- 
+
+  
   receiveMessage: (message) =>
     # 受け取ったデータをappend
     $('#chat').append "#{message.name} : #{message.body}<br/>"
- 
+
+   
 $ ->
   window.chatClass = new ChatClass($('#chat').data('uri'), true)
