--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -11,6 +11,7 @@
 	<div class="form-group">
 	    <div class="col-sm-10">
 	      <span id="username" ><%= current_user.name %></span>
+	      <div id="now_users"  data-uri="<%= request.host %>:<%= request.port %>/websocket"></div>
 	    </div>
 	</div>
 	<div class="form-group">
@@ -27,4 +28,3 @@
 </form>
 <div id="chat" class="well" data-uri="<%= request.host %>:<%= request.port %>/websocket">
 </div>
-<div id="chat2"></div>
